@@ -1,2 +1,0 @@
-AnyObjectId[78d832c11c42023d4bc12077a1d9b7b5025217bc] was removed in git history.
-Apache SVN contains full history.
