@@ -156,33 +156,6 @@ specifier|abstract
 class|class
 name|ContentSource
 block|{
-DECL|field|BZIP
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|BZIP
-init|=
-literal|0
-decl_stmt|;
-DECL|field|GZIP
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|GZIP
-init|=
-literal|1
-decl_stmt|;
-DECL|field|OTHER
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|OTHER
-init|=
-literal|2
-decl_stmt|;
 DECL|field|extensionToType
 specifier|private
 specifier|static
@@ -191,7 +164,7 @@ name|Map
 argument_list|<
 name|String
 argument_list|,
-name|Integer
+name|String
 argument_list|>
 name|extensionToType
 init|=
@@ -200,24 +173,22 @@ name|HashMap
 argument_list|<
 name|String
 argument_list|,
-name|Integer
+name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
 static|static
 block|{
+comment|// these in are lower case, we will lower case at the test as well
 name|extensionToType
 operator|.
 name|put
 argument_list|(
 literal|".bz2"
 argument_list|,
-name|Integer
+name|CompressorStreamFactory
 operator|.
-name|valueOf
-argument_list|(
-name|BZIP
-argument_list|)
+name|BZIP2
 argument_list|)
 expr_stmt|;
 name|extensionToType
@@ -226,12 +197,9 @@ name|put
 argument_list|(
 literal|".bzip"
 argument_list|,
-name|Integer
+name|CompressorStreamFactory
 operator|.
-name|valueOf
-argument_list|(
-name|BZIP
-argument_list|)
+name|BZIP2
 argument_list|)
 expr_stmt|;
 name|extensionToType
@@ -240,12 +208,9 @@ name|put
 argument_list|(
 literal|".gz"
 argument_list|,
-name|Integer
+name|CompressorStreamFactory
 operator|.
-name|valueOf
-argument_list|(
 name|GZIP
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|extensionToType
@@ -254,12 +219,9 @@ name|put
 argument_list|(
 literal|".gzip"
 argument_list|,
-name|Integer
+name|CompressorStreamFactory
 operator|.
-name|valueOf
-argument_list|(
 name|GZIP
-argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -517,10 +479,10 @@ argument_list|(
 literal|'.'
 argument_list|)
 decl_stmt|;
-name|int
+name|String
 name|type
 init|=
-name|OTHER
+literal|null
 decl_stmt|;
 if|if
 condition|(
@@ -530,9 +492,8 @@ operator|-
 literal|1
 condition|)
 block|{
-name|Integer
-name|typeInt
-init|=
+name|type
+operator|=
 name|extensionToType
 operator|.
 name|get
@@ -544,66 +505,28 @@ argument_list|(
 name|idx
 argument_list|)
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+try|try
+block|{
 if|if
 condition|(
-name|typeInt
+name|type
 operator|!=
 literal|null
 condition|)
 block|{
-name|type
-operator|=
-name|typeInt
-operator|.
-name|intValue
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-try|try
-block|{
-switch|switch
-condition|(
-name|type
-condition|)
-block|{
-case|case
-name|BZIP
-case|:
-comment|// According to BZip2CompressorInputStream's code, it reads the first
-comment|// two file header chars ('B' and 'Z'). It is important to wrap the
-comment|// underlying input stream with a buffered one since
-comment|// Bzip2CompressorInputStream uses the read() method exclusively.
-name|is
-operator|=
+comment|// bzip or gzip
+return|return
 name|csFactory
 operator|.
 name|createCompressorInputStream
 argument_list|(
-literal|"bzip2"
+name|type
 argument_list|,
 name|is
 argument_list|)
-expr_stmt|;
-break|break;
-case|case
-name|GZIP
-case|:
-name|is
-operator|=
-name|csFactory
-operator|.
-name|createCompressorInputStream
-argument_list|(
-literal|"gz"
-argument_list|,
-name|is
-argument_list|)
-expr_stmt|;
-break|break;
-default|default:
-comment|// Do nothing, stay with FileInputStream
+return|;
 block|}
 block|}
 catch|catch
